implement OODT-306